--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,34 @@ footer p{
 footer p span{
     font-weight: bold;
 }
+
+.pyrokines h3{
+    text-align: center;
+    font-size: 20px;
+    margin: 20px;
+    font-weight: bold;
+}
+.pyrokines p{
+    margin-left: 50px;
+}
+.pyrokines ul li{
+    margin-left: 30px;
+}
+.pyrokines__form{
+    width: 1240px;
+    height: 150px;
+    background-color:#2b2929 ;
+    padding-top: 30px;
+    margin-bottom: 30px;
+    margin-top: 10px;
+}
+.pyrokines__form input, button{
+    width: 650px;
+    height: 38px;
+    border-radius: 5px;
+    margin-left: 280px;
+}
+button{
+    margin-top: 10px;
+    background-color: white;
+}
