--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,19 @@ footer p{
 footer p span{
     font-weight: bold;
 }
+
+.table{
+    padding: 20px;
+    background-color:#2b2929 ;
+}
+.table h3{
+    color: white;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+table{
+    color: white;
+    width: 1000px;
+    font-size: 14px;
+}
